--- a/doc/default.css
+++ b/doc/default.css
@@ -14,6 +14,12 @@ body {
   font-family: "bodyfont";
 }
 
+pre {
+    border-style: solid;
+    border-width: 1px;
+    padding: 12px;
+}
+
 /**
  * vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
  */
